# example_ragbot

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/src/resume_ragbot/: config.py  main.py
backend/src/resume_ragbot/api/: routes.py
backend/src/resume_ragbot/extraction/: base.py  extractors.py
backend/src/resume_ragbot/llm/: __init__.py  anthropic_client.py  base.py  google_client.py  openai_client.py
backend/src/resume_ragbot/rag/: chunking.py  embedding.py  prompts.py  retriever.py
backend/tests/eval/: cases.py  eval.md  metrics.py  runner.py
backend/tests/fixtures/: COS_Biochemistry.docx  CS-Sample-Resume.docx  JackieJacketResume.docx  engineering_resume25.docx  engineering_resume25.odt  engineering_resume25.txt
backend/tests/unit/: conftest.py  test_api_routes.py  test_docx.py  test_factory.py  test_odt.py  test_pdf.py  test_plaintext.py  test_rag.py
backend/typings/faiss/: __init__.pyi
frontend/: README.md  package-lock.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  CollectionSelect.tsx  FileUpload.tsx  SourceBadge.tsx
frontend/src/hooks/: useChat.ts
scripts/: test_ask.sh  test_clearall.sh  test_multiple_upload.sh  test_upload.sh
